finish up some TODOs

--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -154,7 +154,7 @@
 
 \newcommandx{\XCINSTR}[6][6={}]{
   \paragraph{\VERB[RV]{#1}}
-  \label{sec:spec:instr:#1} \XCSYNTAXDEF{#1}{#2}
+  \label{sec:spec:instruction:#1} \XCSYNTAXDEF{#1}{#2}
 
   \begin{itemize}[labelindent=0pt,align=left,noitemsep]
   \item {\bf Description:} 
