--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -1,146 +1,146 @@
 % =============================================================================
 
-\begin{table}
+\begin{table}[!ht]
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                     & Section                              \\
+Class                 & Syntax                     & Section                                    \\
 \hline                                                                             
-\multirow{12}{*}{1}   & \XCSYNTAXUSE{xc.xcr2gpr}   & \REFSEC{sec:spec:instr:xc.xcr2gpr}   \\
-                      & \XCSYNTAXUSE{xc.gpr2xcr}   & \REFSEC{sec:spec:instr:xc.gpr2xcr}   \\
-                      & \XCSYNTAXUSE{xc.cmov}      & \REFSEC{sec:spec:instr:xc.cmov}      \\
-                      & \XCSYNTAXUSE{xc.cmovn}     & \REFSEC{sec:spec:instr:xc.cmovn}     \\
-                      & \XCSYNTAXUSE{xc.ld.bu}     & \REFSEC{sec:spec:instr:xc.ld.bu}     \\
-                      & \XCSYNTAXUSE{xc.ld.hu}     & \REFSEC{sec:spec:instr:xc.ld.hu}     \\
-                      & \XCSYNTAXUSE{xc.ld.b}      & \REFSEC{sec:spec:instr:xc.ld.b}      \\
-                      & \XCSYNTAXUSE{xc.ld.h}      & \REFSEC{sec:spec:instr:xc.ld.h}      \\
-                      & \XCSYNTAXUSE{xc.ld.w}      & \REFSEC{sec:spec:instr:xc.ld.w}      \\
-                      & \XCSYNTAXUSE{xc.st.b}      & \REFSEC{sec:spec:instr:xc.st.b}      \\
-                      & \XCSYNTAXUSE{xc.st.h}      & \REFSEC{sec:spec:instr:xc.st.h}      \\
-                      & \XCSYNTAXUSE{xc.st.w}      & \REFSEC{sec:spec:instr:xc.st.w}      \\
+\multirow{12}{*}{1}   & \XCSYNTAXUSE{xc.xcr2gpr}   & \REFSEC{sec:spec:instruction:xc.xcr2gpr}   \\
+                      & \XCSYNTAXUSE{xc.gpr2xcr}   & \REFSEC{sec:spec:instruction:xc.gpr2xcr}   \\
+                      & \XCSYNTAXUSE{xc.cmov}      & \REFSEC{sec:spec:instruction:xc.cmov}      \\
+                      & \XCSYNTAXUSE{xc.cmovn}     & \REFSEC{sec:spec:instruction:xc.cmovn}     \\
+                      & \XCSYNTAXUSE{xc.ld.bu}     & \REFSEC{sec:spec:instruction:xc.ld.bu}     \\
+                      & \XCSYNTAXUSE{xc.ld.hu}     & \REFSEC{sec:spec:instruction:xc.ld.hu}     \\
+                      & \XCSYNTAXUSE{xc.ld.b}      & \REFSEC{sec:spec:instruction:xc.ld.b}      \\
+                      & \XCSYNTAXUSE{xc.ld.h}      & \REFSEC{sec:spec:instruction:xc.ld.h}      \\
+                      & \XCSYNTAXUSE{xc.ld.w}      & \REFSEC{sec:spec:instruction:xc.ld.w}      \\
+                      & \XCSYNTAXUSE{xc.st.b}      & \REFSEC{sec:spec:instruction:xc.st.b}      \\
+                      & \XCSYNTAXUSE{xc.st.h}      & \REFSEC{sec:spec:instruction:xc.st.h}      \\
+                      & \XCSYNTAXUSE{xc.st.w}      & \REFSEC{sec:spec:instruction:xc.st.w}      \\
 \hline                                                                             
 \end{tabular}
 \end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $1$,   per \REFSEC{sec:spec:instr:1}.}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $1$,   per \REFSEC{sec:spec:instruction:1}.}
 \label{tab:syntax:1}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
 
-\begin{table}
+\begin{table}[!ht]
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                     & Section                              \\
+Class                 & Syntax                     & Section                                    \\
 \hline                                                                             
-\multirow{ 3}{*}{2.1} & \XCSYNTAXUSE{xc.rngtest}   & \REFSEC{sec:spec:instr:xc.rngtest}   \\
-                      & \XCSYNTAXUSE{xc.rngseed}   & \REFSEC{sec:spec:instr:xc.rngseed}   \\
-                      & \XCSYNTAXUSE{xc.rngsamp}   & \REFSEC{sec:spec:instr:xc.rngsamp}   \\
+\multirow{ 3}{*}{2.1} & \XCSYNTAXUSE{xc.rngtest}   & \REFSEC{sec:spec:instruction:xc.rngtest}   \\
+                      & \XCSYNTAXUSE{xc.rngseed}   & \REFSEC{sec:spec:instruction:xc.rngseed}   \\
+                      & \XCSYNTAXUSE{xc.rngsamp}   & \REFSEC{sec:spec:instruction:xc.rngsamp}   \\
 \hline                                                                             
 \end{tabular}
 \end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $2.1$, per \REFSEC{sec:spec:instr:2:1}.}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.1$, per \REFSEC{sec:spec:instruction:2:1}.}
 \label{tab:syntax:2:1}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
 
-\begin{table}
+\begin{table}[!ht]
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                     & Section                              \\
+Class                 & Syntax                     & Section                                    \\
 \hline                                                                             
-\multirow{ 4}{*}{2.2} & \XCSYNTAXUSE{xc.scatter.b} & \REFSEC{sec:spec:instr:xc.scatter.b} \\
-                      & \XCSYNTAXUSE{xc.scatter.h} & \REFSEC{sec:spec:instr:xc.scatter.h} \\
-                      & \XCSYNTAXUSE{xc.gather.b}  & \REFSEC{sec:spec:instr:xc.gather.b}  \\
-                      & \XCSYNTAXUSE{xc.gather.h}  & \REFSEC{sec:spec:instr:xc.gather.h}  \\
+\multirow{ 4}{*}{2.2} & \XCSYNTAXUSE{xc.scatter.b} & \REFSEC{sec:spec:instruction:xc.scatter.b} \\
+                      & \XCSYNTAXUSE{xc.scatter.h} & \REFSEC{sec:spec:instruction:xc.scatter.h} \\
+                      & \XCSYNTAXUSE{xc.gather.b}  & \REFSEC{sec:spec:instruction:xc.gather.b}  \\
+                      & \XCSYNTAXUSE{xc.gather.h}  & \REFSEC{sec:spec:instruction:xc.gather.h}  \\
 \hline                                                                             
 \end{tabular}
 \end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $2.2$, per \REFSEC{sec:spec:instr:2:2}.}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.2$, per \REFSEC{sec:spec:instruction:2:2}.}
 \label{tab:syntax:2:2}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
 
-\begin{table}
+\begin{table}[!ht]
 \begin{center} 
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                     & Section                              \\
+Class                 & Syntax                     & Section                                    \\
 \hline                                                                             
-\multirow{ 7}{*}{2.3} & \XCSYNTAXUSE{xc.ld.hi}     & \REFSEC{sec:spec:instr:xc.ld.hi}     \\
-                      & \XCSYNTAXUSE{xc.ld.li}     & \REFSEC{sec:spec:instr:xc.ld.li}     \\
-                      & \XCSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instr:xc.bop}       \\
-                      & \XCSYNTAXUSE{xc.ext}       & \REFSEC{sec:spec:instr:xc.ext}       \\
-                      & \XCSYNTAXUSE{xc.ins}       & \REFSEC{sec:spec:instr:xc.ins}       \\
-                      & \XCSYNTAXUSE{xc.mix.l}     & \REFSEC{sec:spec:instr:xc.mix.l}     \\
-                      & \XCSYNTAXUSE{xc.mix.h}     & \REFSEC{sec:spec:instr:xc.mix.h}     \\
+\multirow{ 7}{*}{2.3} & \XCSYNTAXUSE{xc.ld.hi}     & \REFSEC{sec:spec:instruction:xc.ld.hi}     \\
+                      & \XCSYNTAXUSE{xc.ld.li}     & \REFSEC{sec:spec:instruction:xc.ld.li}     \\
+                      & \XCSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instruction:xc.bop}       \\
+                      & \XCSYNTAXUSE{xc.ext}       & \REFSEC{sec:spec:instruction:xc.ext}       \\
+                      & \XCSYNTAXUSE{xc.ins}       & \REFSEC{sec:spec:instruction:xc.ins}       \\
+                      & \XCSYNTAXUSE{xc.mix.l}     & \REFSEC{sec:spec:instruction:xc.mix.l}     \\
+                      & \XCSYNTAXUSE{xc.mix.h}     & \REFSEC{sec:spec:instruction:xc.mix.h}     \\
 \hline                                                                             
 \end{tabular}
 \end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $2.3$, per \REFSEC{sec:spec:instr:2:3}.}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.3$, per \REFSEC{sec:spec:instruction:2:3}.}
 \label{tab:syntax:2:3}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
 
-\begin{table}
+\begin{table}[!ht]
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                     & Section                              \\
+Class                 & Syntax                     & Section                                    \\
 \hline                                                                             
-\multirow{15}{*}{2.4} & \XCSYNTAXUSE{xc.padd}      & \REFSEC{sec:spec:instr:xc.padd}      \\
-                      & \XCSYNTAXUSE{xc.psub}      & \REFSEC{sec:spec:instr:xc.psub}      \\
-                      & \XCSYNTAXUSE{xc.pmul.l}    & \REFSEC{sec:spec:instr:xc.pmul.l}    \\
-                      & \XCSYNTAXUSE{xc.pmul.h}    & \REFSEC{sec:spec:instr:xc.pmul.h}    \\
-                      & \XCSYNTAXUSE{xc.pclmul.l}  & \REFSEC{sec:spec:instr:xc.pclmul.l}  \\
-                      & \XCSYNTAXUSE{xc.pclmul.h}  & \REFSEC{sec:spec:instr:xc.pclmul.h}  \\
-                      & \XCSYNTAXUSE{xc.psll}      & \REFSEC{sec:spec:instr:xc.psll}      \\
-                      & \XCSYNTAXUSE{xc.psll.i}    & \REFSEC{sec:spec:instr:xc.psll.i}    \\
-                      & \XCSYNTAXUSE{xc.psrl}      & \REFSEC{sec:spec:instr:xc.psrl}      \\
-                      & \XCSYNTAXUSE{xc.psrl.i}    & \REFSEC{sec:spec:instr:xc.psrl.i}    \\
-                      & \XCSYNTAXUSE{xc.prot}      & \REFSEC{sec:spec:instr:xc.prot}      \\
-                      & \XCSYNTAXUSE{xc.prot.i}    & \REFSEC{sec:spec:instr:xc.prot.i}    \\
-                      & \XCSYNTAXUSE{xc.pperm.w}   & \REFSEC{sec:spec:instr:xc.pperm.w}   \\
-                      & \XCSYNTAXUSE{xc.pperm.hx}  & \REFSEC{sec:spec:instr:xc.pperm.hx}  \\
-                      & \XCSYNTAXUSE{xc.pperm.bx}  & \REFSEC{sec:spec:instr:xc.pperm.bx}  \\
+\multirow{15}{*}{2.4} & \XCSYNTAXUSE{xc.padd}      & \REFSEC{sec:spec:instruction:xc.padd}      \\
+                      & \XCSYNTAXUSE{xc.psub}      & \REFSEC{sec:spec:instruction:xc.psub}      \\
+                      & \XCSYNTAXUSE{xc.pmul.l}    & \REFSEC{sec:spec:instruction:xc.pmul.l}    \\
+                      & \XCSYNTAXUSE{xc.pmul.h}    & \REFSEC{sec:spec:instruction:xc.pmul.h}    \\
+                      & \XCSYNTAXUSE{xc.pclmul.l}  & \REFSEC{sec:spec:instruction:xc.pclmul.l}  \\
+                      & \XCSYNTAXUSE{xc.pclmul.h}  & \REFSEC{sec:spec:instruction:xc.pclmul.h}  \\
+                      & \XCSYNTAXUSE{xc.psll}      & \REFSEC{sec:spec:instruction:xc.psll}      \\
+                      & \XCSYNTAXUSE{xc.psll.i}    & \REFSEC{sec:spec:instruction:xc.psll.i}    \\
+                      & \XCSYNTAXUSE{xc.psrl}      & \REFSEC{sec:spec:instruction:xc.psrl}      \\
+                      & \XCSYNTAXUSE{xc.psrl.i}    & \REFSEC{sec:spec:instruction:xc.psrl.i}    \\
+                      & \XCSYNTAXUSE{xc.prot}      & \REFSEC{sec:spec:instruction:xc.prot}      \\
+                      & \XCSYNTAXUSE{xc.prot.i}    & \REFSEC{sec:spec:instruction:xc.prot.i}    \\
+                      & \XCSYNTAXUSE{xc.pperm.w}   & \REFSEC{sec:spec:instruction:xc.pperm.w}   \\
+                      & \XCSYNTAXUSE{xc.pperm.hx}  & \REFSEC{sec:spec:instruction:xc.pperm.hx}  \\
+                      & \XCSYNTAXUSE{xc.pperm.bx}  & \REFSEC{sec:spec:instruction:xc.pperm.bx}  \\
 \hline                                                                             
 \end{tabular}
 \end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $2.4$, per \REFSEC{sec:spec:instr:2:4}.}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.4$, per \REFSEC{sec:spec:instruction:2:4}.}
 \label{tab:syntax:2:4}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
 
-\begin{table}
+\begin{table}[!ht]
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                     & Section                              \\
+Class                 & Syntax                     & Section                                    \\
 \hline                                                                             
-\multirow{15}{*}{2.5} & \XCSYNTAXUSE{xc.madd.2}    & \REFSEC{sec:spec:instr:xc.madd.2}    \\
-                      & \XCSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instr:xc.madd.3}    \\
-                      & \XCSYNTAXUSE{xc.msub.2}    & \REFSEC{sec:spec:instr:xc.msub.2}    \\
-                      & \XCSYNTAXUSE{xc.msub.3}    & \REFSEC{sec:spec:instr:xc.msub.3}    \\
-                      & \XCSYNTAXUSE{xc.macc.1}    & \REFSEC{sec:spec:instr:xc.macc.1}    \\
-                      & \XCSYNTAXUSE{xc.macc.2}    & \REFSEC{sec:spec:instr:xc.macc.2}    \\
-                      & \XCSYNTAXUSE{xc.mmul.1}    & \REFSEC{sec:spec:instr:xc.mmul.1}    \\
-                      & \XCSYNTAXUSE{xc.mclmul.1}  & \REFSEC{sec:spec:instr:xc.mclmul.1}  \\
-                      & \XCSYNTAXUSE{xc.msll}      & \REFSEC{sec:spec:instr:xc.msll}      \\
-                      & \XCSYNTAXUSE{xc.msll.i}    & \REFSEC{sec:spec:instr:xc.msll.i}    \\
-                      & \XCSYNTAXUSE{xc.msrl}      & \REFSEC{sec:spec:instr:xc.msrl}      \\
-                      & \XCSYNTAXUSE{xc.msrl.i}    & \REFSEC{sec:spec:instr:xc.msrl.i}    \\
-                      & \XCSYNTAXUSE{xc.mequ}      & \REFSEC{sec:spec:instr:xc.mequ}      \\
-                      & \XCSYNTAXUSE{xc.mlte}      & \REFSEC{sec:spec:instr:xc.mlte}      \\
-                      & \XCSYNTAXUSE{xc.mgte}      & \REFSEC{sec:spec:instr:xc.mgte}      \\
+\multirow{15}{*}{2.5} & \XCSYNTAXUSE{xc.madd.2}    & \REFSEC{sec:spec:instruction:xc.madd.2}    \\
+                      & \XCSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instruction:xc.madd.3}    \\
+                      & \XCSYNTAXUSE{xc.msub.2}    & \REFSEC{sec:spec:instruction:xc.msub.2}    \\
+                      & \XCSYNTAXUSE{xc.msub.3}    & \REFSEC{sec:spec:instruction:xc.msub.3}    \\
+                      & \XCSYNTAXUSE{xc.macc.1}    & \REFSEC{sec:spec:instruction:xc.macc.1}    \\
+                      & \XCSYNTAXUSE{xc.macc.2}    & \REFSEC{sec:spec:instruction:xc.macc.2}    \\
+                      & \XCSYNTAXUSE{xc.mmul.1}    & \REFSEC{sec:spec:instruction:xc.mmul.1}    \\
+                      & \XCSYNTAXUSE{xc.mclmul.1}  & \REFSEC{sec:spec:instruction:xc.mclmul.1}  \\
+                      & \XCSYNTAXUSE{xc.msll}      & \REFSEC{sec:spec:instruction:xc.msll}      \\
+                      & \XCSYNTAXUSE{xc.msll.i}    & \REFSEC{sec:spec:instruction:xc.msll.i}    \\
+                      & \XCSYNTAXUSE{xc.msrl}      & \REFSEC{sec:spec:instruction:xc.msrl}      \\
+                      & \XCSYNTAXUSE{xc.msrl.i}    & \REFSEC{sec:spec:instruction:xc.msrl.i}    \\
+                      & \XCSYNTAXUSE{xc.mequ}      & \REFSEC{sec:spec:instruction:xc.mequ}      \\
+                      & \XCSYNTAXUSE{xc.mlte}      & \REFSEC{sec:spec:instruction:xc.mlte}      \\
+                      & \XCSYNTAXUSE{xc.mgte}      & \REFSEC{sec:spec:instruction:xc.mgte}      \\
 \hline                                                                             
 \end{tabular}
 \end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $2.5$, per \REFSEC{sec:spec:instr:2:5}.}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.5$, per \REFSEC{sec:spec:instruction:2:5}.}
 \label{tab:syntax:2:5}
 \end{table}                                                                      
 
