--- a/docs/specification/notation.tex
+++ b/docs/specification/notation.tex
@@ -181,7 +181,7 @@
          the former is basically a $1$-column version of the latter,
       b) $\SCOPE{\ID{AES}}{\ALG{S-Box}}$ denotes the AES S-box,
          and
-      c) $\SCOPE{\ID{AES}}{\ALG{X}}^{-1}$ denotes the inverse $\ALG{X}$,
+      c) $\SCOPE{\ID{AES}}{\ALG{X}}^{-1}$ denotes the inverse of $\ALG{X}$,
          e.g., $\SCOPE{\ID{AES}}{\ALG{S-Box}}^{-1}$ is the inverse S-box.
 
 \end{itemize}
