Fix encoding bug due to fat thumbs in previous commit
- Add support for new instructions to binutils
- Add the basic unit tests for each new instruction.
- Closes #35

 On branch dev/new-instructions
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/spec-instruction.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	new file:   verif/unit/34-packed-arith-mul-h.S
	new file:   verif/unit/35-packed-arith-clmul-h.S
	new file:   verif/unit/36-packed-arith-clmul-l.S
	new file:   verif/unit/37-mclmul.S
	new file:   verif/unit/38-aes.S

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -1247,7 +1247,10 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 \label{sec:spec:instruction:3:1}
 
 \XCINSTR{xc.aessub}{mode, rot, crd, crs1, crs2}{
-  \iencaessub
+  \iencaessubenc
+  \iencaessubencrot
+  \iencaessubdec
+  \iencaessubdecrot
 }{
   Per~\cite[Figures 5]{SCARV:TilGro:06}, 
   apply a (carefully structured) form of the AES 
@@ -1297,7 +1300,8 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 }
 
 \XCINSTR{xc.aesmix}{mode,      crd, crs1, crs2}{
-  \iencaesmix
+  \iencaesmixenc
+  \iencaesmixdec
 }{
   Per~\cite[Figures 5]{SCARV:TilGro:06}, 
   apply a (carefully structured) form of the AES 
